--- a/index.html
+++ b/index.html
@@ -38,7 +38,8 @@
 </head>
 
 <body>
-   <input type="text" name="" id="data" placeholder="Enter your data">
+    <button id="btn">Add</button>
+    <p id="para">Anwser will display here</p>
     <script>
         // const paragarph=document.getElementById("para");
         // paragarph.textContent="Hai Surya!";
@@ -49,22 +50,39 @@
         // }
         // const button = document.getElementById("btn");
         // button.style.backgroundColor="blue";
-        let array = [
-  { name: "sand", age: 25, profession: "frontend" },
-  { name: "sam", age: 35, profession: "backend" },
-  { name: "ajay", age: 45, profession: "fullstack" }
-];
+        //         let array = [
+        //   { name: "sand", age: 25, profession: "frontend" },
+        //   { name: "sam", age: 35, profession: "backend" },
+        //   { name: "ajay", age: 45, profession: "fullstack" }
+        // ];
 
-function names(datas) {
-  for (let data of datas) {
-    if (data.age >= 35) {
-      console.log(data);
-    }
-  }
-}
-names(array);
+        // function names(datas) {
+        //   for (let data of datas) {
+        //     if (data.age >= 35) {
+        //       console.log(data);
+        //     }
+        //   }
+        // }
+        // names(array);
+        // const button = document.getElementById("btn");
+        // const paragarph = document.getElementById("para");
 
-        
+        // button.addEventListener("click", (event) => {
+        //     let a = 10;
+        //     let b = 10;
+        //     let total= a + b;
+        //     paragarph.textContent = "Sum: " + total;
+        // });
+        // button.addEventListener("mouseout", () => {
+        //     alert("mouse out")
+        // })
+
+        const add=(a,b)=>{
+   console.log(add(2,5));
+   
+        }
+
+
     </script>
 </body>
 
