--- a/index.html
+++ b/index.html
@@ -77,10 +77,14 @@
         //     alert("mouse out")
         // })
 
-        const add=(a,b)=>{
-   console.log(add(2,5));
-   
-        }
+        // const add = (a, b) => {
+        //     console.log(add(2, 5));
+
+        // }
+
+        const time=new Date();
+        console.log(time);
+        
 
 
     </script>
