--- a/mock.html
+++ b/mock.html
@@ -1,27 +1,24 @@
 <!DOCTYPE html>
 <html>
   <body>
-    <button id="fetchCars">Get Cars</button>
+    <button id="fetchCars">Get Details</button>
     <div id="carList" style="width: 100%; display: flex;flex-wrap: wrap;gap:10px" >
         
     </div>
-
     <script>
       document.getElementById("fetchCars").addEventListener("click", function () {
-        fetch("https://68a2c221c5a31eb7bb1dab99.mockapi.io/api/cards/carimage")
+        fetch("https://68a33ddac5a31eb7bb1f8caa.mockapi.io/car/image")
           .then((res) => res.json())
           .then((cars) => {
             let carList = document.getElementById("carList");
             carList.innerHTML = "";
-            cars.forEach(car => {
-              carList.innerHTML += `
+            cars.forEach(car =>{
+              carList.innerHTML +=`
                 <div>
                 <h3>${car.name}</h3>
                   <img src="${car.image}" width="300"/>
                   <p>Price: $${car.price}</p>
-                </div>
-               
-              `;
+                </div> `;
             });
           })
           .catch(err => console.log("Error fetching cars:", err));
