form post method

--- a/get.html
+++ b/get.html
@@ -51,7 +51,7 @@ h5{
   </div>
   <script>
     document.getElementById("click").addEventListener("click", () => {
-      fetch("https://68a33ddac5a31eb7bb1f8caa.mockapi.io/car/name", {
+      fetch("https://68a582352a3deed2960dbd2c.mockapi.io/api/name", {
         method: "GET",
         headers: { "content-type": "application/json" }
       })
