--- a/multiple_card.html
+++ b/multiple_card.html
@@ -9,18 +9,27 @@
         #container {
             display: flex;
             flex-wrap: wrap;
-            gap:15px;
+            gap: 15px;
             justify-content: center;
             background-color: aqua;
             width: 80%;
             height: auto;
         }
 
+        button {
+            background-color: rgba(241, 173, 12, 0.842);
+            border-radius: 15px;
+            border: none;
+            padding: 5px;
+            width: 150px;
+        }
+
         img {
             width: 250px;
             height: 200px;
         }
-        .para{
+
+        .para {
             width: 300px;
             height: 100px;
             background-color: antiquewhite;
@@ -41,7 +50,7 @@
                 method: "GET",
                 headers: { "content-type": "application/json" },
             })
-            .then(res => res.ok ? res.json() : Promise.reject("Fetch failed"));
+                .then(res => res.ok ? res.json() : Promise.reject("Fetch failed"));
         }
 
         function renderImages(data) {
