--- a/login.html
+++ b/login.html
@@ -71,6 +71,10 @@
     </div>
   </div>
 
+  <div>
+    <img src="footwear.jpg" alt="" style="width: 100%;height: 80%;">
+  </div>
+
   <script>
 
     const loginBtn = document.getElementById("loginBtn");
