--- a/sgin&login.html
+++ b/sgin&login.html
@@ -24,14 +24,13 @@
         }
 
         #loginPopup {
-            position: fixed;
-            flex-direction: column;
+           margin: 0 auto;
             width: 100%;
             height: 100vh;
             display: flex;
-            background-color: rgba(71, 70, 70, 0.5);
-            justify-content: center;
-            align-items: center;
+            background-color: rgba(142, 139, 139, 0.5);
+            /* justify-content: center;
+            align-items: center; */
         }
 
         #signup {
@@ -135,8 +134,8 @@
 
         }
 
-        .home {
-            background-image: url("E:\Javascript-01\Javascript\footwear.jpg");
+        .home{
+            background-image: url("footwear.jpg");
             background-size: cover;
             width: 100%;
             height: 80%;
@@ -183,9 +182,9 @@
         </form>
     </div>
 
-    <section>
-        <div class="home">
-            <img src="footwear.jpg" alt="" style="width: 100%; height: 50%; ">
+    <section class="home">
+        <div >
+            <!-- <img src="footwear.jpg" alt="" style="width: 100%; height: 50%; "> -->
         </div>
     </section>
     <script>
@@ -275,8 +274,6 @@
                     document.getElementById("failed").textContent = "Login failed. Please try again.";
                     document.getElementById("success").textContent = "";
                 });
-
-
         });
 
     </script>
